--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,56 +1,182 @@
 @use 'sass:math';
 
 .container {
-  padding: 0 2rem;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  color: rgb(255, 239, 218);
+  background: radial-gradient(
+    circle at top,
+    rgb(196, 150, 115) 0%,
+    rgb(68, 53, 43) 100%
+  );
 }
 
 .main {
-  min-height: 100vh;
-  padding: 4rem 0;
-  flex: 1;
   display: flex;
-  flex-direction: column;
+  width: 100%;
+  height: 100%;
   justify-content: center;
   align-items: center;
-}
 
-.piano {
-  display: flex;
-  flex-direction: row;
-  -webkit-touch-callout: none; /* iOS Safari */
-  -webkit-user-select: none; /* Safari */
-  -khtml-user-select: none; /* Konqueror HTML */
-  -moz-user-select: none; /* Old versions of Firefox */
-  -ms-user-select: none; /* Internet Explorer/Edge */
-  user-select: none; /* Non-prefixed version, currently
-                                supported by Chrome, Edge, Opera and Firefox */
-  cursor: pointer;
-}
+  .ui {
+    display: flex;
+    flex-direction: row;
+    gap: 5rem;
+    .waveformContainer {
+      .inputsContainer {
+        div {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          margin-top: 0.5rem;
+          gap: 0.5rem;
 
-.key {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  border: 0.1rem solid black;
+          label {
+            cursor: pointer;
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 0.5rem;
+          }
+        }
 
-  &Black {
-    @extend .key;
-    width: 1rem;
-    height: 5rem;
-    margin-right: -0.6rem;
-    margin-left: -0.6rem;
-    background-color: black;
-    color: white;
-    z-index: 1;
+        input[type='radio'] {
+          cursor: pointer;
+          display: grid;
+          place-content: center;
+          appearance: none;
+          background-color: #fff;
+          margin: 0;
+          font: inherit;
+          color: currentColor;
+          width: 1.15em;
+          height: 1.15em;
+          border: 0.15em solid currentColor;
+          border-radius: 50%;
+        }
+
+        input[type='radio']::before {
+          content: '';
+          width: 0.65em;
+          height: 0.65em;
+          border-radius: 50%;
+          transform: scale(0);
+          transition: 120ms transform ease-in-out;
+          background-color: rgba(138, 92, 48, 0.692);
+        }
+
+        input[type='radio']:checked::before {
+          transform: scale(1);
+        }
+      }
+    }
+
+    .midiInputContainer {
+      .play {
+        border: 2px solid rgba(255, 210, 167, 0.322);
+        background-color: rgba(255, 210, 167, 0.1);
+        padding: 0.75rem 2rem;
+        width: 100%;
+        border-radius: 1rem;
+        margin-top: 1rem;
+        cursor: pointer;
+        font-family: Montserrat;
+        font-weight: bold;
+        color: rgb(255, 239, 218);
+
+        transition: all 100ms ease-in-out;
+
+        &:disabled {
+          border: 2px solid rgba(104, 104, 104, 0.322);
+          background-color: rgba(70, 70, 70, 0.1);
+          cursor: not-allowed;
+        }
+
+        &:hover {
+          background-color: rgba(70, 70, 70, 0.1);
+        }
+      }
+
+      .boxInput {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+
+        width: 10rem;
+        height: 10rem;
+        border-radius: 1rem;
+        justify-content: center;
+        align-items: center;
+        outline: 2px dashed rgba(255, 232, 201, 0.336);
+        outline-offset: -5px;
+
+        .boxDragAndDrop {
+          display: inline;
+        }
+
+        input {
+          position: absolute;
+          top: 0;
+          left: 0;
+          height: 100%;
+          width: 100%;
+          cursor: pointer;
+          opacity: 0;
+          &:focus {
+            outline: none;
+          }
+        }
+      }
+    }
+
+    .volume {
+      display: flex;
+      flex-direction: column;
+      position: relative;
+
+      label {
+        position: absolute;
+        border-radius: 0.5rem;
+        background-color: rgb(189, 149, 112);
+        font-family: Montserrat;
+        font-weight: bold;
+        left: 1rem;
+        top: 0;
+        transform: translateY(-50%);
+        padding: 0rem 0.5rem;
+      }
+
+      input {
+        width: 8rem;
+        background-color: transparent;
+        font-family: Montserrat;
+        font-size: 16pt;
+        border: none;
+        padding: 1rem 1.5rem;
+        color: rgba(255, 232, 201, 0.836);
+
+        &:focus {
+          outline: none !important;
+        }
+      }
+
+      .fakeInput {
+        cursor: text;
+        border: 2px solid rgba(255, 210, 167, 0.322);
+        border-radius: 1.5rem;
+        padding-right: 1.5rem;
+        color: rgba(255, 232, 201, 0.836);
+      }
+    }
   }
-  &White {
-    @extend .key;
-    width: 1.5rem;
-    height: 8.5rem;
-    background-color: white;
-  }
 
-  p {
-    transform: rotate(270deg);
+  .piano {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
   }
 }
