--- a/components/Piano/Piano.module.scss
+++ b/components/Piano/Piano.module.scss
@@ -29,6 +29,7 @@
     }
     &White {
       position: relative;
+      z-index: 50;
 
       flex: 1;
       margin: 0px 1px;
@@ -56,7 +57,6 @@
   }
   &White {
     @extend .key;
-    transform: translateZ(-100px);
 
     height: 12rem;
     background: linear-gradient(
